--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "22573e88-4719-4e1f-a1f2-c0e52e87feaa",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "<center>\n",
+    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7bfc6b5-7f78-46fd-99fa-a977245cb5ed",
+   "metadata": {},
+   "source": [
+    "#### Add your code below following the instructions given in the course"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8d6ed8b3-04ab-422c-bced-6233be4cc44c",
    "metadata": {},
    "source": [
